--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@portabletext/react": "^5.0.0",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^7.13.1",
     "@testing-library/dom": "^10.4.1",
